--- a/makemytrip.css
+++ b/makemytrip.css
@@ -1,5 +1,5 @@
 .nav-background {
-    background-image: url("https://i0.wp.com/takebackroads.com/wp-content/uploads/2018/11/cali-back-roads.jpg?resize=723%2C293&ssl=1" );
+    background-image: url("https://i.pinimg.com/originals/a6/db/41/a6db418f8f51da21c84a9e4e7360a14c.jpg" );
     background-size: cover;
     display: flex;
     justify-content: baseline;
